examples/test/testpolicy5239.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5239
  namespace: namespace273
spec:
  podSelector:
    matchLabels:
      key30: value49
      key19: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value30
          key1: value30
      podSelector:
        matchLabels:
          key35: value23
          key11: value29
          key5: value40
